@@ -20,7 +20,7 @@ func init() {
 	// spec/endpoint.yml
 	// spec/filebeat.yml
 	// spec/metricbeat.yml
-	unpacked := packer.MustUnpack("eJy8mFt3qziWx9/nY5zXmTUD4jhT9Fr1YEiBwQ45Jokk9IYkG7AlTAV8gV793XuJiw3OSVWd6u56yEpMhLQv/733T/77l7LYsP/b5Lw4ZHn1v7UUX/72hUqnIq+HJESzPXPNgubr5A3AHcd+wRf7ZQT0/XNmCSrDMwXiyG29ISjQmRTaZl2kLA8LIp0dfzwk5LZHRVwI7DwQLCdFBN4evMfIeH5MlhFIRQSqbYxmDXedkj4elqsXS2xcuMOAFNR9e7CzeeLZ1jnC4eE5m2fjfdnNtqxflzLJm+fkkHj2PFm9zDMuYR0jMvP6Z9wVFUGmrmx8auZL5poNd9R+gRahS/mcHCrPhV8JCrZEipK8HpbqPW9hpdxNHjzb/77/L163znVqYjz1ds8rz/ave3sju1Yvus5cXkcoFHfPa4KDE8f+juCnbLTPJ+dO1h83Upy/52uwm5/t3KoJNHUqxZEZYUrd84OdaQnBqYh0U8boIobYMdfR4sdD4kl4JAvrFKOZtsKBiAxYxzi8xjPCfs6aPkZDzNHsg88fbfF16sKmizcpNo7Z8IUvIqQ9eIvKtPvndBEKJkwQoYtO8BBXqyHoIiIjPLHdIYnR7Mxx2PT/eyd4/+Atwhlz3/rckZQuoLjZqY31uWxjIEXJXVhj427tIhDUhTvumvVzZhU0t3S+eOpzXYnNa6v1NJIXQea9r9IpOYIjHVoay6GY+LT7uP/EPrUfXl8/T32cV55r6nxh6Xx+PaMmmBQMiBNNDksOUkF3h+TFdZo1ms2WNpfUhYLbrPDsSHq/pCnThEaQ3ixt+P8IiCNbQI3purl8mUs/s7wIB88R0gUzrDQCbwcf9GfarPRsLqjrNNwVOwZgymRw8Ov98sv/dK1lm4kN3cQfWosqKeSLCK+HdtLKLpIw5fOiK9/Mol6mO152Trw8EHwBzyspSvoyE1Q6GXXh/htSaQpEu+Z+bR4Kiq0ywqFYSXiMkF8StDaJdEoG3rKVPc9Wb91vipxjhLigCB65PasoCMU3nFTMdXZxrfch80rP9qrwRf32qwjNUgJgRVRJjPbnC18nL5O1JQU8j9EsX8mL4BKW31AoohzmntCWEfa1GJE0MtYPnqtiEjartu3BjCBH+90SyVpZ/EpQoGEgjsSFXwfJ8YU4q3hT18zZuW2rBZWFKpktM8KaIKfChlVTEAhmBKerHF3ziEFwopKUMQq0TvKqdYfbCBGN4L7NdeX14LmXEzGe2hKiyDnft4+70qw5ukzKMALmeQPNlLqXLXfNLXVFwx9v7cSzLY02h2SwmZ0PyfV/H209UmCe+xJpfwhOdwRbWqupPNCYhCnFT23uY7Ruf1/Lt82zf2bS3BEcNNTwG5WnO1s1qptljANt8LWzRZWSyssopvnTn/XjFnMJJTX8rnUs1Aho66jPFakp0B48ty/d89Bqf7o9M64+L/tWrzE1op3OBwy6FvBZ3u7tjXEo6OtHPyZndnqrIjy/G9937XNx1fetTUrnyMAl5dfRP5/Y1ep6PY6dnrKFdWun1+etLjt9jmNtz9ua6Ed7+/f4HM+2VJ0eud2Pw8wqKWB3e0PQ1r4RaMQVx+fMargbFjSZnkMwETRfn7gbnJ8zS4uM+Sf7wD1TvqHwfGeLOvtEXHMXA6jGz56C4P1ag2Nfa7MmKCyYbjbUNQ3l13Nmdc++4//KCGYMXE6k1aRoRnHodIZMQKDZjtKxTTGAs+fM0hmAW2pATeX7B97bRzhMGfhz76zkLKUINqo3Dxpoxx7ST1zCbbt+UpP9eHYdLcKB4PbsqMbZfxotprHsNHL7DPfsNrJHmtCSIc/j2BBXNKO9upydr+83T7e/jwSHUuX+hgipxhfWrwyYt/Pdn5pgB1OOwmKEDukmhzVBnR7jBbxhpxuU1IB7IhU2hvXmFvecAjOnLjxz5DcceTdUAY6MwS9/MVYFJ7YY9GNJJs3qY78JT1PeaPuU+qzm2sf85yOMd0dz+XMEeydYNMonsi6M2IWqNyiM8rkLK1YnYqNXt/PtWW9fwLcv+8TPohbXXlWPx8E5QoFY2vzEcXjmeJ2v7HlO0CVlRlhERiAi7O/iDsW6Oq9ZqWzzQZUSWaV+fU58pRcjUPqf4JncVO8Z+w6gvSKoMSl2PZDtKFJwogu+8IsI9ODWMX+C6ivoNASHOlMOudrxmrhHXUbo0txB0bBWDZ4zdR2N/B7YST2l0skJ0lVDPVJk7smr/nWFFZeWVc/KvwV2t/1xWHN0B4FqICiAqmdl27Qf9T1Bvk5qn9vSqbkrZNQN5lYArDYrgsM6RkEPataJGeHkHtsJpGtMk3vk5G6ln8gClureRmyz2eBAQcRxg/TrvUmBg4o3wWt191SA2g7NlVyfVONWwlrloqL2bB/jYACZJcvbfR/6IvyKBxB4PSQbQ5sAYYxme4KToQC0DbbU4Bt8bLoCE8dYQgUOPYTqW7bwTxGADQNmPRQlBbNtBMwjkZeiA1txZADW3DFTkoeC3QNqr7ceGmqlHYre/kghD8Uz2NPbqafs8e7O/h0Y+gRAdtSwZhg4JXU+Ab3u7NuZo4H10ffZiU6GviU2biDYYv3gOWV2hai6rYuiB9CrVrtLzQQoM7y+s9UITxhcCmasp8NzALVRjiYg8EN+XHOYEUROTL791TDZN2l/OwwBbPCCu+mWSZgTnF4vHj00tBoeLh1KZzj7+r4CfR8znva/Oez/VUBwr5fCTyGhvSyu/x2gDLccCC12FABysVnM/xg4L3xV45vlo7n+1gHNf6+ysvgYo+6nPePxkPhj+LG1hLUXYF1Mwau/mEzW3i5Bqn+ri+BtkOppDOA2wn4d3UNgr5Frn7jB40grg82BuMass62iBhEYtEAxtqPP0+i9+Q8A5R2Y/BCE/pl3BnD9C6GZ40BgcAWc5dBvhrUk908qL3f67/M7Zojf7OuTObqS37vIXmfkBCivPQbAkqBAU5f1UX1M5/MfArbpd2YvSnf46eDjik786b4kausRY230Xdoozi9JPlyOOgiDZYQDTc1Sgpw6Akm+am24gZtn8/cIkffopf27pIArlmhimxV28vPPX/7xX/8MAAD//3jh/kY=")
+	unpacked := packer.MustUnpack("eJy8mFFzq7oRx9/7Mc5rOy2I47R05j7YpAiwQ45JIgm9WZIN2BJ2jzE2dPrdOwKMwUnO7bl35j5knBAh7a52//tb/+fL8bDmf1vn4rDP8uKvlZJf/vmFKbegr/skwpMdh/aB5cvkDaCtIMFBeLt5DMzdczaTTEVnBuRJOGZNcWhyJY318pDyPDpQ5W7F4z6htz0KChFw8lDynB5i8PbgP8bW82Myj0EqY1BsVnhSC+ge2eN+vniZyTVEWwLogcG3ByebJr4zO8ck2j9n02y4L7/ZlnXrUq5E/ZzsE9+ZJouXaSYUqlaYTvzumYCyoNg2tY1P9XTOoV0LV+8XGjG+HJ+TfeFD9JXicEOVPNLX/Vy/53uzVMDkwXeCj/1/8dt10K2o9dTZPS18J+j39gd2LV5Mk0NRxTiSd88rSsJSkGBLyVM22OeTc0frT2slzx/5Gm6nZyefVRTZJlPyxK0oZfD84GRGQkkqY9NWK3yR19hx6Bqrx33iK3Si3qxc4YmxIKGMLVStSNTHMyZBzusuRteY48k7n9/bEpgMorqNNz2sXbsWXiBjbDz4XmE73XPmRZJLG8T4YlJyjeuspvgiYysq+XafrPDkLEhUd//7TsnuwfeiCYdv3d3RlHlI3uw0hvk5b2Kg5FFAVBHrbq0XSgbRVkC7es5mB5bPTOE9dXddyPVrk+tprC6STjtflXsUGA3ycGbwHMmRT9v3+4/s0/uRZf/32Mdp4UPbFN7MFNP+jIoSeuBAlizZzwVIJdvukxfo1ks8mcwdoRhEUjj84Dux8v+VptyQBsVmPXfQ3zGQJ+4hg5umPX+ZqiCb+TEJn2NsSm7N0hi87QPQnenwo+8IyaBbCyi3HKCUq3AfVLv5l7+00rLJ5JqtV++kRZcUDmRMllc5adIuVigV00NbvtmM+Znp+tk58fNQCg+dF0oe2ctEMuVmDKLdN6yvKZTNmvu1eSQZmR1jEsmFQqcYB0eKlzZV7pGDt2zhTLPFW/vJsHuKsZAMo5NwJgUDkfxGkoJDd7uqzC5k/tF3/CJ60Z9BEeNJSgEqqC6Jwf7CC0z6Mlp7ZEDkKzzJF+oihULHbziScY5yXxrzmATGCtM0tpYPPtQxiepFI3soo9g1frVEsiYt/k1xaBAgTxSir9eUE54863gzaOf83MjqgamDLpkNt6KKYrcg1qxiIJTcCss+HaF9IiAsmaLHFQ6NNuW1dEebGFODkk7m2vJ68OGlpNZTU0IMu+d7+bgrzUrgy6gMY2Cf18hOGbxsBLQ3DMpaPN7kxHdmBqv3ydVmft4n/f/e23piwD53JdL8UJJuKZkZTU7locEVShl5au5+hZfNZ1++zT0HZ67sLSVhzayg1vd0Z6vBTPu4IqFx9bW1RZeSvpdBTPOn3+rHLeYKKWYFrXR4ugU0ddTdFa0YMB582JXu+Sq1/7g9s3qf553UG1y3aLf1gYBWAj67t3t7VySS7PW9H6Mz23wrYjK9a9938un1+X2TSeWeOLikom/905FdTV4vh7EzU+7NbnLaP7+UtEOI5vdhvJu8oJLly7Jr8U2dDM/znZmu15Nw7FrA6KCllFvRboW/3p2DQKMDVrTl2j4Ynj/Zx6Te9MH30I5Px7bosxcgKmNQaD8SCu3tCqDqbp8jA7zkCu1WJNxwcCkFuJRU51Tz7Om9/5Vdr0mo33vwvXCi37nGoWkX2CyFQpsVQJNxLrdtTZBQEvBBm/mV9yh0jZiE8je940xOg5bT1x5XqGAWlQQ064d11bZ7GKUCujUly1NTI8smB3VvMSgJNvctmQN01LrJLP9d/TQ2ZjNjTWayy987/NDtdxTLNkdueazvurd9kBOFD7t7ToaxiQ58sFd3Zzff66f+d6aQQdWlFLf1e+FF51UeloPzy6c6NmOi8+KGEDE5mFyhNh9hasa39VsGbZNCWgqNRfnuhiHALim4SO6hjFvohqOwSKkq0t+NabDvn5+iWtNX2/vcMmvW5w/Ng1Jr0d2+jc7SAWcM8e79/QdD/RmwyC2WgkRnMUQxgCZc+6TeRpj1orWRPO0DUrDB+aerfYQYA/SapAyjWnMGfUlyZiFD52BQnZMAoGNMQmOFw5pit4pBki+cad7Veb5obBPfY0y/xy8NimnO0CNUvXL4wUl++eWKYWpdfM/4ByD2ipHBldx24LVlWEOIKYUXHGLQAVrL9gmueqCpKYlM7kwODBqnvnE+mirGl/oOfq5rdYM5M+ga9NcATpkpU25OsanF+cSwvaOv5tcF0WJwLDom/hHA3fYnUSXwHexBO6calKrJsWkAj+aO4sCkVSAc5VYCShW3DbgBMF7ZBSVRtcJhB2SzklvRaF5ti6EVt9G8OJqhzJJ66KjnM+o0oqxh4bTGZj8f6cTV8aZkqWdMDaJNc1yoZcktWQuIikUuC+ZMdAO4Asuc582+D12SfyXXhv+6T9aWMQK/FZ7sKEmuxdkI3HM2u/pYt8UsTyuFNCB0sGluuBeUMUA1B3ZfQAxMNjGwT1RdDi3AyhMHqBKundI86gWuB9Eu3zo4qHTuMNzP94oru3gPCFF5exZe7ensNFP+eDebfwA9n4BGIyQEuEfmfgJ07dm3MwfN+L3vk5JZ02FTkmsYSu4tH3z3mPWwVDV1cehAs8/VdngZgWNGlne2WlFJwOXAreUIjHogG9zRCC5/yo/+DjOKaSNwfzA0vmvYxBIHAdMNVyinJO0HjA+adKXzjGRfvy9Ap2PW0+6HjeiPbV6/E4jRRgBprFy7oljItTf9/wDZC3SNr+eP9vJbO7T9eZEdD+9j1P40Zzzuk2D4/UkLYA2YjeGtG0BGa29NWOu3Hvhu0GCmK4A2MQmqmOw+zONeJwAyRnY1uXK1WQ/6Tz8Bh4P3fgZK777X+aPgt4+XHviwDSiyGz9G8WrzfxeTKNWxWqgBUCx/M+T/FGSxEUP8UNdHfXShPhpY+x75M8A27s+ffzf2nRLdQ+1K1+Jn0Dbyp/0yqKnH3wVuLay1kF81sPZjcPvvn/4XAAD//8d4/Os=")
 	SupportedMap = make(map[string]Spec)
 
 	for f, v := range unpacked {
